minor fix in notebook

--- a/ExploratoryAnalysis.ipynb
+++ b/ExploratoryAnalysis.ipynb
@@ -13,11 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = \"./lord-of-the-rings-data/\""
+    "data_path = \"./data/\""
    ]
   },
   {
