adding stopwords and analysis of script data

--- a/ExploratoryAnalysis.ipynb
+++ b/ExploratoryAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,11 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_path = \"./data/\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analysis of characters dataset"
    ]
   },
   {
@@ -1228,6 +1235,619 @@
    ],
    "source": [
     "chars[chars.name == 'Aragorn II Elessar']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analysis of script dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>char</th>\n",
+       "      <th>dialog</th>\n",
+       "      <th>movie</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>DEAGOL</td>\n",
+       "      <td>Oh Smeagol Ive got one! , Ive got a fish Smeag...</td>\n",
+       "      <td>The Return of the King</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>SMEAGOL</td>\n",
+       "      <td>Pull it in! Go on, go on, go on, pull it in!</td>\n",
+       "      <td>The Return of the King</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>DEAGOL</td>\n",
+       "      <td>Arrghh!</td>\n",
+       "      <td>The Return of the King</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>SMEAGOL</td>\n",
+       "      <td>Deagol!</td>\n",
+       "      <td>The Return of the King</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>SMEAGOL</td>\n",
+       "      <td>Deagol!</td>\n",
+       "      <td>The Return of the King</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0     char                                             dialog  \\\n",
+       "0           0   DEAGOL  Oh Smeagol Ive got one! , Ive got a fish Smeag...   \n",
+       "1           1  SMEAGOL     Pull it in! Go on, go on, go on, pull it in!     \n",
+       "2           2   DEAGOL                                           Arrghh!    \n",
+       "3           3  SMEAGOL                                          Deagol!     \n",
+       "4           4  SMEAGOL                                          Deagol!     \n",
+       "\n",
+       "                     movie  \n",
+       "0  The Return of the King   \n",
+       "1  The Return of the King   \n",
+       "2  The Return of the King   \n",
+       "3  The Return of the King   \n",
+       "4  The Return of the King   "
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "script = pd.read_csv(data_path + \"/lotr_scripts.csv\")\n",
+    "script.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This data seems cleaner than previous data we analyze. The only can be done to drop unnecessary index column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>char</th>\n",
+       "      <th>dialog</th>\n",
+       "      <th>movie</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>DEAGOL</td>\n",
+       "      <td>Oh Smeagol Ive got one! , Ive got a fish Smeag...</td>\n",
+       "      <td>The Return of the King</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>SMEAGOL</td>\n",
+       "      <td>Pull it in! Go on, go on, go on, pull it in!</td>\n",
+       "      <td>The Return of the King</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>DEAGOL</td>\n",
+       "      <td>Arrghh!</td>\n",
+       "      <td>The Return of the King</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>SMEAGOL</td>\n",
+       "      <td>Deagol!</td>\n",
+       "      <td>The Return of the King</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>SMEAGOL</td>\n",
+       "      <td>Deagol!</td>\n",
+       "      <td>The Return of the King</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      char                                             dialog  \\\n",
+       "0   DEAGOL  Oh Smeagol Ive got one! , Ive got a fish Smeag...   \n",
+       "1  SMEAGOL     Pull it in! Go on, go on, go on, pull it in!     \n",
+       "2   DEAGOL                                           Arrghh!    \n",
+       "3  SMEAGOL                                          Deagol!     \n",
+       "4  SMEAGOL                                          Deagol!     \n",
+       "\n",
+       "                     movie  \n",
+       "0  The Return of the King   \n",
+       "1  The Return of the King   \n",
+       "2  The Return of the King   \n",
+       "3  The Return of the King   \n",
+       "4  The Return of the King   "
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "script.drop('Unnamed: 0', axis = 1, inplace = True)\n",
+    "script.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, we groupby data based on character name, and see how many quotes they have in the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>char</th>\n",
+       "      <th>size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>26</td>\n",
+       "      <td>FRODO</td>\n",
+       "      <td>229</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>75</td>\n",
+       "      <td>SAM</td>\n",
+       "      <td>218</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>33</td>\n",
+       "      <td>GANDALF</td>\n",
+       "      <td>214</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>ARAGORN</td>\n",
+       "      <td>187</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>68</td>\n",
+       "      <td>PIPPIN</td>\n",
+       "      <td>163</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>57</td>\n",
+       "      <td>MERRY</td>\n",
+       "      <td>137</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>39</td>\n",
+       "      <td>GOLLUM</td>\n",
+       "      <td>133</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>38</td>\n",
+       "      <td>GIMLI</td>\n",
+       "      <td>116</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>90</td>\n",
+       "      <td>THEODEN</td>\n",
+       "      <td>110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>22</td>\n",
+       "      <td>FARAMIR</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       char  size\n",
+       "26    FRODO   229\n",
+       "75      SAM   218\n",
+       "33  GANDALF   214\n",
+       "2   ARAGORN   187\n",
+       "68   PIPPIN   163\n",
+       "57    MERRY   137\n",
+       "39   GOLLUM   133\n",
+       "38    GIMLI   116\n",
+       "90  THEODEN   110\n",
+       "22  FARAMIR    65"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#remove additional blanks\n",
+    "script.char = script.char.str.strip()\n",
+    "# there are some dialogs where char is mentioned as character + VOICE OVER(or VOICEOVER)\n",
+    "script.char = script.char.str.replace(\"VOICE\", \"\")\n",
+    "script.char = script.char.str.replace(\"OVER\", \"\").str.strip()\n",
+    "\n",
+    "char_count = script.groupby('char').size().reset_index(name='size')\n",
+    "char_count.sort_values('size', ascending = False).head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After getting the stats about the characters, for second step, we want to get, how many movies are there in data, and\n",
+    "analyze how many quotes each movie has."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movie</th>\n",
+       "      <th>size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>The Two Towers</td>\n",
+       "      <td>1010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>The Return of the King</td>\n",
+       "      <td>873</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>The Fellowship of the Ring</td>\n",
+       "      <td>507</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        movie  size\n",
+       "2              The Two Towers  1010\n",
+       "1      The Return of the King   873\n",
+       "0  The Fellowship of the Ring   507"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "script.movie = script.movie.str.strip()\n",
+    "movie_count = script.groupby('movie').size().reset_index(name='size')\n",
+    "movie_count.sort_values('size', ascending = False).head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's discover some stats about a specific movie. Let's get main characters of first movie - The Two Towers with regards to number of dialogues they have."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>char</th>\n",
+       "      <th>size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>ARAGORN</td>\n",
+       "      <td>99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>35</td>\n",
+       "      <td>SAM</td>\n",
+       "      <td>89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12</td>\n",
+       "      <td>FRODO</td>\n",
+       "      <td>84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>17</td>\n",
+       "      <td>GOLLUM</td>\n",
+       "      <td>78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>41</td>\n",
+       "      <td>THEODEN</td>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       char  size\n",
+       "0   ARAGORN    99\n",
+       "35      SAM    89\n",
+       "12    FRODO    84\n",
+       "17   GOLLUM    78\n",
+       "41  THEODEN    64"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "two_towers = script[script.movie == 'The Two Towers']\n",
+    "two_towers_count = two_towers.groupby('char').size().reset_index(name='size')\n",
+    "two_towers_count.sort_values('size', ascending = False).head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It would also be interesting to know which words main characters used most. So, in order to that, we retrieve all the dialogues the character has, and split each dialogue to words and remove stopwords.\n",
+    "\n",
+    "Additionally, we add an option to find that which other characters the character mention or refer most. Basically, for each word we check that this word is inside the character list. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(data_path + '/stopwords.txt', 'r') as f:\n",
+    "    stopwords = f.read().split(' ')\n",
+    "\n",
+    "def most_used_words(char_name, movie_name, n_words, only_characters = False):\n",
+    "    char_name = char_name.upper()\n",
+    "    m = script[script.movie == movie_name]\n",
+    "    w = m[m.char == char_name].dialog.str.strip().str.lower().str.replace(r'([^\\s\\w]|_)+', '').str.split().values\n",
+    "    d = {}\n",
+    "    for quote in w:\n",
+    "        for word in quote:\n",
+    "            if word not in stopWords and (only_characters == False or word in m.char.str.lower().values):\n",
+    "                if word in d:\n",
+    "                    d[word] += 1\n",
+    "                else:\n",
+    "                    d[word] = 1\n",
+    "    cooccurences = {k: v for k, v in sorted(d.items(), key=lambda item: -item[1])}\n",
+    "    return list(cooccurences.items())[:n_words]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's play with data to see what one of the main characters of each movie speak most."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gollum in \"The Two Towers\"\n",
+      "1. Most used words: \n",
+      " [('master', 13), ('precious', 9), ('kill', 6), ('gollum', 6)]\n",
+      "2. Most mentioned character names: \n",
+      " [('gollum', 6), ('smeagol', 5)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Gollum in \"The Two Towers\"')\n",
+    "print(\"1. Most used words: \\n\", most_used_words('gollum', 'The Two Towers', 4))\n",
+    "print(\"2. Most mentioned character names: \\n\", most_used_words('gollum', 'The Two Towers', 4, only_characters=True))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So we can discover famous words of Gollum such as 'master' and 'precious' in data  :D "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf in \"The Return of the King\"\n",
+      "1. Most used words: \n",
+      " [('city', 10), ('frodo', 8), ('king', 7), ('peregrin', 7), ('gondor', 7)]\n",
+      "2. Most mentioned character names: \n",
+      " [('frodo', 8), ('saruman', 5), ('sauron', 5), ('faramir', 5), ('denethor', 4)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Gandalf in \"The Return of the King\"')\n",
+    "print(\"1. Most used words: \\n\", most_used_words('gandalf', 'The Return of the King', 5))\n",
+    "print(\"2. Most mentioned character names: \\n\", most_used_words('gandalf', 'The Return of the King', 5, only_characters=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Frodo in \"The Fellowship of the Ring\"\n",
+      "1. Most used words: \n",
+      " [('sam', 7), ('bilbo', 6), ('gandalf', 5)]\n",
+      "2. Most mentioned character names: \n",
+      " [('sam', 7), ('bilbo', 6), ('gandalf', 5)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Frodo in \"The Fellowship of the Ring\"')\n",
+    "print(\"1. Most used words: \\n\", most_used_words('frodo', 'The Fellowship of the Ring', 3))\n",
+    "print(\"2. Most mentioned character names: \\n\", most_used_words('frodo', 'The Fellowship of the Ring', 3, only_characters=True))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So, it seems Frodo loves Sam, Bilbo, and Gandalf so much."
    ]
   }
  ],
